--- a/zvery-icon-font/css/zvery-icons-codes.css
+++ b/zvery-icon-font/css/zvery-icons-codes.css
@@ -11,7 +11,7 @@
 .icon-icon_4_of_a_kind:before { content: '\e809'; } /* '' */
 .icon-icon_attack_2:before { content: '\e80a'; } /* '' */
 .icon-icon_attack_1:before { content: '\e80b'; } /* '' */
-.icon-icon_straight:before { content: '\e80c'; } /* '' */
+.icon-chain_rework_2:before { content: '\e80c'; } /* '' */
 .icon-icon_shield_1:before { content: '\e80d'; } /* '' */
 .icon-icon_shield_2:before { content: '\e80e'; } /* '' */
 .icon-icon_shield_3:before { content: '\e80f'; } /* '' */
